src/OpenCvSharpExtern/cuda.h

CVAPI(Stream*) cuda_Stream_new1()
{
    return new Stream();
}
CVAPI(Stream*) cuda_Stream_new2(Stream* s)
{
    return new Stream(*s);
}
CVAPI(void) cuda_Stream_delete(Stream *obj)
{
    delete obj;
}
CVAPI(void) cuda_Stream_opAssign(Stream *left, Stream *right)
{
    *left = *right;
}
CVAPI(int) cuda_Stream_queryIfComplete(Stream *obj)
{
    return obj->queryIfComplete() ? 1 : 0;
}
CVAPI(void) cuda_Stream_waitForCompletion(Stream *obj)
{
    obj->waitForCompletion();
}
CVAPI(void) cuda_Stream_enqueueHostCallback(
    Stream *obj, Stream::StreamCallback callback, void* userData)
{
    obj->enqueueHostCallback(callback, userData);
}
CVAPI(Stream*) cuda_Stream_Null()
{
    return &Stream::Null();
}
CVAPI(int) cuda_Stream_bool(Stream *obj)
{
    return (bool)(*obj) ? 1 : 0;
}